Projeto/Compilador/tests/cases/error/T9.pas
program T9;
var
  b: boolean;
begin
  b := 1;
end.
